[gd_scene load_steps=6 format=3 uid="uid://dmfxaqejewmky"]

[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="1_burua"]
[ext_resource type="Script" uid="uid://bn4lb0snrikq6" path="res://tutorial/Tutorial.gd" id="2_vy6qu"]
[ext_resource type="FontFile" uid="uid://dc44yikjkj2vr" path="res://assets/fonts/BarlowCondensed-Light.ttf" id="3_qk73h"]
[ext_resource type="Texture2D" uid="uid://3hrqxf5svfx2" path="res://asi/Rufus.png" id="3_ridmi"]
[ext_resource type="FontFile" uid="uid://cbuxuoo5ck6s2" path="res://assets/fonts/BarlowCondensed-SemiBold.ttf" id="4_ridmi"]

[node name="Tutorial" type="Control" node_paths=PackedStringArray("TipPanel", "TipBody")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_burua")
script = ExtResource("2_vy6qu")
TipPanel = NodePath("TipPanel")
TipBody = NodePath("TipPanel/TipPanel/VBoxContainer/TipBody")

[node name="TipPanel" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -116.0
offset_right = 139.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -70

[node name="Rufus" type="TextureRect" parent="TipPanel"]
z_index = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_ridmi")
expand_mode = 3
stretch_mode = 5

[node name="TipPanel" type="PanelContainer" parent="TipPanel"]
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="TipPanel/TipPanel"]
layout_mode = 2
size_flags_vertical = 8

[node name="TipBody" type="RichTextLabel" parent="TipPanel/TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_qk73h")
theme_override_fonts/bold_font = ExtResource("4_ridmi")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="OKButton" type="Button" parent="TipPanel/TipPanel/VBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "OK"

[connection signal="pressed" from="TipPanel/TipPanel/VBoxContainer/OKButton" to="." method="on_ok_button_pressed"]
